--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -2612,21 +2612,17 @@ property & rdf:List & listElement & - & xsd:string & order & 1 \\
 
 \section{Validation Levels}
 
-requirements:
+\ms{Validation Levels} corresponds to the requirements
 
 \begin{itemize}
-	\item R-205-VARYING-LEVELS-OF-ERROR
-	\item R-135-CONSTRAINT-LEVELS
-	\item R-158-SEVERITY-LEVELS-OF-CONSTRAINT-VIOLATIONS
-	\item R-193-MULTIPLE-CONSTRAINT-VALIDATION-EXECUTION-LEVELS
+	\item \ms{R-205-VARYING-LEVELS-OF-ERROR},
+	\item \ms{R-135-CONSTRAINT-LEVELS},
+	\item \ms{R-158-SEVERITY-LEVELS-OF-CONSTRAINT-VIOLATIONS}, and
+	\item \ms{R-193-MULTIPLE-CONSTRAINT-VALIDATION-EXECUTION-LEVELS}.
 \end{itemize}
 
-\begin{itemize}
-  \item Different levels of severity, priority
-	\item validation levels: informational, warning, error, fail, should, recommended, must, may, optional, closed (only this) constraints, open (at least this) constraints
-\end{itemize}
-
-\subsection{Simple Example}
+Different levels of severity, priority should be assigned to constraints.
+Possible validation levels could be: informational, warning, error, fail, should, recommended, must, may, optional, closed (only this) constraints, open (at least this).
 
 \begin{DL}
 Not expressible in DL!
