--- a/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
+++ b/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
@@ -252,12 +252,19 @@ Half or full day, including preferences
 
 \section{Previous Versions or Related Tutorials}
 
-Thomas Bosch and Benjamin Zapilko hold a half-day tutorial at the EDDI14 – 6th Annual European DDI User Conference in London [1].
-We got great feedback for this tutorial and had the idea to provide this tutorial at the ESWC conference next year as well.
+Thomas Bosch and Benjamin Zapilko hold a half-day tutorial at the EDDI14 – 6th Annual European DDI User Conference in London\footnote{\url{http://www.eddi-conferences.eu/ocs/index.php/eddi/eddi14/schedConf/program}}.
+We got great feedback for this tutorial and had the idea to provide this tutorial at the ESWC conference as well.
+At the EDDI conference, we reached the first part of our audience - data professionals and the DDI community.
+At the ESWC conference, we want to reach the second part of our audience - Linked Data experts.
 
 \section{Tutoring Team}
 
+%short bios of the presenters, including previous training and public speaking experience (e.g., teaching in English, conference presentations, tutorials etc.)
 
+Thomas Bosch\footnote{\url{http://boschthomas.blogspot.com}} (M.Sc. in Computer Science) is a PhD student at Gesis - Leibniz Institute for the Social Sciences in Mannheim , Germany since 2010.
+He studied Information Systems at the Technical University of Munich.
+His general research topic is about RDF validation. 
+He hold multiple conference and workshop presentations (e.g. ISWC, DC, WWW, Dagstuhl seminars) in the last five years. 
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
