--- a/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
+++ b/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
@@ -190,14 +190,7 @@
 %
 %%%% list of authors for the TOC (use if author list has to be modified)
 \institute{GESIS – Leibniz Institute for the Social Sciences, Germany\\
-\email{thomas.bosch@gesis.org},\\ 
-\and
-University of Mannheim, Germany \\
-\email{\{christian,erman,kai\}@informatik.uni-mannheim.de} 
-\and
-Albstadt-Sigmaringen University, Germany \\
-\email{nolle@hs-albsig.de}
-}
+\email{\{benjamin,thomas\}}.bosch@gesis.org}
 
 \maketitle              % typeset the title of the contribution
 
