ESWC 2015 Tutorial abstract

--- a/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
+++ b/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
@@ -195,9 +195,16 @@
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-200 words
+The DDI-RDF Discovery Vocabulary (Disco) is an RDF Schema vocabulary that supports the discovery of microdata sets and related metadata using RDF technologies in the Web of Linked Data. Disco can be used to discover datasets by searching for specific questions, topics, and geographical coverage. Disco is intended to provide means to describe microdata by essential metadata for the discovery purpose.
+ The DDI (Data Documentation Initiative) is a structured metadata standard related to the observation and measurement of human activity.
 
-\keywords{RDF Validation, RDF Constraints, OWL 2 QL, OWL 2 DL, Reasoning, RDF Validation Requirements, Linked Data, Semantic Web}
+For a publication of DDI metadata as Linked Data, widely accepted and adopted RDF vocabularies (e.g. RDF Data Cube, DCAT, SKOS, and Physical Data Description) are reused to a large extend. 
+The workshop organizers show how Disco is interwoven with these vocabularies. 
+The combined usage of Physical Data Description, Disco, and DCAT enables the creation of data repositories which provide metadata for the description of collections, for data discovery, and for processing of the data.
+ 
+In different real world use cases, the workshop organizers demonstrate the adoption and inclusion of Disco in existing information systems. 
+
+\keywords{DDI-RDF Discovery Vocabulary, Disco, Microdata, Microdata Metadata, Discovery of Microdata, Data Documentation Initiative, DDI, Linked Data, Semantic Web}
 \end{abstract}
 %
 
@@ -212,7 +219,7 @@ Proposals should not exceed 5 pages using a reasonable font size (not less than 
 
 \section{Call for Participation}
 
-The DDI-RDF Discovery Vocabulary (Disco) is a RDF Schema vocabulary that supports the discovery of microdata sets and related metadata using RDF technologies in the Web of Linked Data. Disco can be used to discover datasets by searching for specific questions, topics, and geographical coverage. Disco is intended to provide means to describe microdata by essential metadata for the discovery purpose.
+The DDI-RDF Discovery Vocabulary (Disco) is an RDF Schema vocabulary that supports the discovery of microdata sets and related metadata using RDF technologies in the Web of Linked Data. Disco can be used to discover datasets by searching for specific questions, topics, and geographical coverage. Disco is intended to provide means to describe microdata by essential metadata for the discovery purpose.
  
 The DDI (Data Documentation Initiative) is a structured metadata standard related to the observation and measurement of human activity.
 It started out in the mid-1990s as a replacement for traditional archival code books documenting research data, and then branched off to cover the research data life cycle. Over time, as the data landscape has
@@ -242,6 +249,8 @@ The workshop has a technical perspective and addresses software developers as we
 \section{Tutorial Length}
 
 Half or full day, including preferences
+
+\tb{we could provide full day if we make the hands on exercises with the SPARQL queries / do you think we should do that?}
 
 \section{Previous Versions or Related Tutorials}
 
