additions for sections 3 to 6

--- a/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
+++ b/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
@@ -245,29 +245,38 @@ We will show how to formulate these constraints by different constraint language
 
 \section{Tutorial Description}
 
-\textbf{objectives of the tutorial} 
+\subsection{Objectives of the Tutorial} 
 
-\textbf{relevance to ESWC 2015}
+\subsection{Relevance to ESWC 2015}
+In this tutorial, the DDI-RDF Discovery vocabulary (Disco) and its interplay with other existing vocabularies is introduced. In contrast to other newly developed vocabularies that can be adopted easily by Linked Data experts in most cases, the complexity of Disco is higher because of its domain-specific origin and the tight interplay with other existing vocabularies. This makes Disco more difficult to be adopted by Linked Data experts that may not be familiar with the domain-specific background of person-level micro data. However, since the number of organizations that aim to publish their complex data as Linked Data grows and the number of researchers that want to conduct their research with real-world data grows, a tutorial on representing such highly complex and inter-connected data sets may be a beneficial addition for the audience of ESWC 2015.
 
-\textbf{information about the scope and level of detail of the material to be covered}
+\subsection{Scope and Level of Detail of the Material}
 
-\textbf{intended audiences}
+\subsection{Intended Audiences}
+Linked Data experts that are interested in modelling and publishing complex and highly inter-connected data sets as Linked Data
 
-\textbf{learning objectives}
+\subsection{Learning Objectives}
+The learning objectives of this tutorial are the following:
+\begin{itemize} 
+\item Introduction of Disco for modelling complex person-level micro data
+\item Representing the interplay of Disco data with existing vocabularies
+\item Validation of Disco
+\end{itemize}
 
-\textbf{practical sessions}
+
+\subsection{Practical Sessions}
+During the tutorial, one complex data set will be built, which serves as ongoing running example. In all sessions, there will be practical exercises where the participants are asked to model and query particular parts of the example data sets. The infrastructure for these exercises, i.e. a triple store with example data, will be provided for all participants by the presenters.
 
 \section{Tutorial Length}
 
-We would like to provide a full day workshop as our experience in the previous tutorial about disco showed that a whole day is needed to explain the most important things about disco and to hold the hands-on exercises.
-We also want to address the validation of DDI-RDF which we did not covered at the last tutorial.
+We propose a full-day workshop. In the previous tutorial about disco, we experienced that a half-day tutorial offers only enough time to cover the most important aspects about disco and to include few hands-on exercises. Since we now want to expand the focus of the tutorial to the interplay of disco with other vocabularies and its validation, a full-day seems to be appropriate. Furthermore, we want to offer hands-on exercises again, because they were well received at the last tutorial.
 
 \section{Previous Versions or Related Tutorials}
 
-Thomas Bosch and Benjamin Zapilko hold a half-day tutorial\footnote{tutorial slides avaliable at: \url{http://de.slideshare.net/boschthomas/201412-lets-disco-eddi-2014} and \url{http://de.slideshare.net/boschthomas/201412-lets-disco-2-eddi-2014}} at the EDDI14 – 6th Annual European DDI User Conference in London\footnote{\url{http://www.eddi-conferences.eu/ocs/index.php/eddi/eddi14/schedConf/program}}.
-We got great feedback for this tutorial and had the idea to provide this tutorial at the ESWC conference as well.
-At the EDDI conference, we reached the first part of our audience - data professionals and the DDI community.
-At the ESWC conference, we want to reach the second part of our audience - Linked Data experts.
+Thomas Bosch and Benjamin Zapilko held a half-day tutorial\footnote{tutorial slides avaliable at: \url{http://de.slideshare.net/boschthomas/201412-lets-disco-eddi-2014} and \url{http://de.slideshare.net/boschthomas/201412-lets-disco-2-eddi-2014}} at the EDDI14 – 6th Annual European DDI User Conference in London\footnote{\url{http://www.eddi-conferences.eu/ocs/index.php/eddi/eddi14/schedConf/program}}.
+The tutorial was well received and the presenters got overall positive feedback. Since the audience of disco is two-fold - data professionals and the DDI community at the one hand and Linked Data experts at the other hand - the idea was to offer this tutorial at the ESWC conference as well.
+At the EDDI conference, the first part of the audience - data professionals and the DDI community - was addressed.
+At the ESWC conference, the second part of our audience - Linked Data experts - will be addressed.
 
 \section{Tutoring Team}
 
@@ -276,7 +285,9 @@ At the ESWC conference, we want to reach the second part of our audience - Linke
 Thomas Bosch\footnote{\url{http://boschthomas.blogspot.com}} (M.Sc. in Computer Science) is a PhD student at Gesis - Leibniz Institute for the Social Sciences in Mannheim , Germany since 2010.
 He studied Information Systems at the Technical University of Munich.
 His general research topic is about RDF validation. 
-He hold multiple conference and workshop presentations (e.g. ISWC, DC, WWW, Dagstuhl seminars) in the last five years. 
+He held multiple conference and workshop presentations (e.g. ISWC, DC, WWW, Dagstuhl seminars) in the last five years. 
+
+Benjamin Zapilko holds a degree in Computer Sceince and has recently finished his PhD thesis about methods for matching social science relevant Linked Data. The defense talk will be at the end of January. Beside his PhD research, he works on modelling and publishing social science relevant data as Linked Data with the focus on data modelling and integration of heterogeneous data sources and information types. He presented his work at several international conferences.
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
