Simple modifications on 4.2

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -506,13 +506,15 @@ The DL constructs \ms{property inclusion}, \ms{complement}, \ms{intersection}, \
 \subsection{Reasoning}
 
 The W3C Data Shapes WG defines \emph{constraint} as a component of a schema what needs to be satisfied\footnote{See \url{https://www.w3.org/2014/data-shapes/wiki/Glossary}.}. 
-Let us call the set of all constraints as $\mathcal{C}$We distinguish two disjoint sub-classes of constraints:
+
+To investigate the affect of reasoning to the validation process, we grouped constraints under two groups
+
 \begin{itemize}
-	\item $\mathcal{C}$: contraints without reasoning
+	\item $\overline{\mathcal{C}_{\overline{R}}}$: contraints without reasoning
 	\item $\mathcal{C}_R$: contraints with reasoning
 \end{itemize}
 
-
+We call the whole set of constraint as $\mathcal{C}$. 
 \emph{Constraints without reasoning} are constraints for which reasoning cannot be done or does not improve the result in any obvious sense.
 \ms{Literal Pattern Matching}\footnote{See R-44-PATTERN-MATCHING-ON-RDF-LITERALS.}, e.g., restrict literals to match given patterns.
 \emph{Luke's droids} can only have the numbers "R2-D2" or "C-3PO".
@@ -557,7 +559,7 @@ If we use subproperties with reasoning, the triple (causing a constraint violati
 
 \subsection{Complexity}
 
-To evaluate RDF validation requirements, we had group constraints under two  main classes: \emph{constraints without reasoning} and \emph{constraints with reasoning}. In addition, to have a further evaluation and to refer easily, we divide the latter into two classes (not disjoint). Overall, we have the following.
+To evaluate RDF validation requirements, we had the classes of constraints: \emph{constraints without reasoning} and \emph{constraints with reasoning}. In addition, to have a further evaluation on the latter and to refer easily, we divide it into two classes (not disjoint). Overall, we have the following. Since, OWL 2 DL is more expressive than OWL 2 QL,  $\mathcal{C}_R ^{\mathcal{QL}} \subseteq \mathcal{C}_R ^{\mathcal{DL}}$ follows. 
 
 \begin{itemize}\itemsep1em
 	\item $\overline{\mathcal{C}_R}$: validation by query answering without reasoning
@@ -565,9 +567,12 @@ To evaluate RDF validation requirements, we had group constraints under two  mai
 	\item $\mathcal{C}_R ^{\mathcal{DL}}$: validation by query answering with OWL 2 DL reasoning
 	
 \end{itemize}
+Recall that, in this work we limit \emph{constraints with reasoning} ($C_R$) to the ones which can be expressed by OWL 2 DL and still requires reasoning  (i.e., $C_R = C_R ^{\mathcal{DL}}$). This is due the fact that, OWL 2 DL is still quite expressive. \footnote{It could alternatively be set to a more expressive language (e.g., OWL 2 Full). Such treatment can be done in future work, if it is understood that we require that.} Some of those constraints can still be expressed in some constraint languages, which will be the focus of next section.
 
 %The complexity class $\mathcal{C}_R$ encompasses all \emph{constraints with reasoning} for which reasoning can be executed but cannot be expressed by OWL 2.  \er{What/Why can't  be expressed by OWL 2  while being inferred? }\tb{e.g. class-specific property ranges or class-specific reflexive object properties cannot be expressed in OWL / these 2 axioms can only be stated globally for the properties, we cannot restrict it to individuals of specific classes}
 The next table gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed. 
+
+
 \begin{center}
 \begin{tabular}{| c | c |}
 \textbf{Constraint Class}  & \textbf{Complexity Class}\\
@@ -578,10 +583,10 @@ $\mathcal{C}_R ^{\mathcal{QL}}$ & \textsc{Ptime} \\
 \hline
 $\mathcal{C}_R ^{\mathcal{DL}}$ & \textsc{N2exptime} \\
 \hline
-$\mathcal{C}_R $ & ? \\
-\hline
 \end{tabular}
 \end{center}
+
+
 What is considered by RDF validation with or without reasoning, corresponds to performing SPARQL queries.  It is known that performing SPARQL queries is in \textsc{Pspace}-Complete \cite{Perez2009}. Since OWL 2 profiles are based on \textit{DL-Lite} family and query answering in OWL 2 QL is in \textsc{LogSpace} (or rather in AC$^0$ ) \cite{Calvanese2007}, so is the constraint validation by queries with  reasoning. Furthermore, TBox-reasoning in OWL 2 QL is in \textsc{Ptime} \cite{Calvanese2007}, hence complete query rewriting as well as combined complexity (reasoning and than querying) is in \textsc{Ptime} \cite{Artale2009,Calvanese2007}.  With the more expressive profile OWL 2 DL, reasoning is in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
 The  relation between those complexity classes is well-known \cite{Arora:2009:CCM:1540612} and as follows:
 
@@ -594,8 +599,7 @@ The  relation between those complexity classes is well-known \cite{Arora:2009:CC
 
 There are constraints (e.g., class-specific property range, class-specific reflexive object properties) for which reasoning could be executed even though there is currently no implementation supported by any constraint language. 
 We leave it as future work to write SPARQL CONSTRUCT queries in order to provide reasoning for these constraints.
-In the worst case, the complexity of such constraints would be \textsc{N2exptime},
-as in case of \emph{cardinality shortcuts}, e.g., OWL2 DL reasoning can be done on cardinality restrictions.
+
 
 \section{Classification of Constraint Languages according to Expressivity and Complexity}
  
