--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -613,20 +613,20 @@ we use the two types of constraints - \emph{constraints without reasoning} and \
 We define these two expressivity classes as follows: 
 
 \begin{itemize}
-  \item $Expr(\mathcal{C})$: set of all constraints
+  %\item $Expr(\mathcal{C})$: set of all constraints
 	\item $Expr(\overline{\mathcal{C}_R})$: set of constraints without reasoning 
 	\item $Expr(\mathcal{C}_R)$: set of constraints with reasoning
 \end{itemize}
 
-\emph{constraints with reasoning} can be used as axioms to infer new triples out of explicitly stated triples (see section \ref{sec:RDF-validation-requirements-and-reasoning}), but also to express constraints without reasoning. \er{Also to express constraints?}\tb{also to express constraints without reasoning}
-If in our knowledge base it is stated that \ms{DarthVader} is a \ms{Sith} (e.g., \ms{Sith(DarthVader)}) and  Siths feel the force of the dark side (e.g., \ms{Sith $\sqsubseteq$ FeelingForceDarkSide}), it is either possible to infer that \ms{DarthVader} feels the force of the dark side (\ms{FeelingForceDarkSide(DarthVader)}) 
-or to check if this class assignment is explicitly stated in the data without reasoning. 
+%\emph{constraints with reasoning} can be used as axioms to infer new triples out of explicitly stated triples (see section \ref{sec:RDF-validation-requirements-and-reasoning}), but also to express constraints without reasoning. \er{Also to express constraints?}\tb{also to express constraints without reasoning}
+%If in our knowledge base it is stated that \ms{DarthVader} is a \ms{Sith} (e.g., \ms{Sith(DarthVader)}) and  Siths feel the force of the dark side (e.g., \ms{Sith $\sqsubseteq$ FeelingForceDarkSide}), it is either possible to infer that \ms{DarthVader} feels the force of the dark side (\ms{FeelingForceDarkSide(DarthVader)}) 
+%or to check if this class assignment is explicitly stated in the data without reasoning. 
 Although, there are no reasoning implementations for  constraint languages other than OWL 2 available yet, 
 \emph{constraints with reasoning} cannot only be expressed by OWL 2 but also by other constraint languages. \er{This is again the part I don't understand.}\tb{but also by other constraint languages}
 
 \begin{center}
 \begin{evaluation}
-$Expr(\mathcal{C})$ & & & & & & \\
+%$Expr(\mathcal{C})$ & & & & & & \\
 $Expr(\overline{\mathcal{C}_R})$ (42) & 6 & 18(4) & 7(4) & 8 & 12 & 41(1)\\
 $Expr(\mathcal{C}_R)$ (32) & 8 & 29 & 11 & 11(2) & 11(1) & 32 \\ 
 \end{evaluation}
@@ -637,7 +637,7 @@ Numbers in round brackets in the other columns indicate the number of constraint
 \er{One possible misunderstanding (maybe not) is the ordering. It is not only based on the size of the number of the constrains that they satisfies right? For instance, if there are 6 constraints (from EXPR-C) that  DSP satisfies and OWL2-DL  can satisfy lets say only 5 of them but 13 other, in such scenario OWL2 DL and DSP would be incomparable (no ordering). It is more expressive only if it contains those 6 and extras.}
 Partial (not necessarily total) orderings are:
 \begin{eqnarray*}
-Expr(\mathcal{C}): ... \\
+%Expr(\mathcal{C}): ... \\
 Expr(\overline{\mathcal{C}_R}): DSP \subset OWL2-QL \subset ReSh \subset ShEx \subset OWL2-DL \subset SPIN \\
 Expr(\mathcal{C}_R): DSP \subset OWL2-QL \subset ShEx \subset ReSh \subset OWL2-DL \subset SPIN
 \end{eqnarray*}
