--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -603,15 +603,15 @@ We leave it as future work to write SPARQL CONSTRUCT queries in order to provide
 
 \section{Classification of Constraint Languages according to Expressivity and Complexity}
  
-We evaluated the most promising five constraint languages on fulfilling each requirement to formulate RDF constraints.
-We also evaluated if a specific requirement is covered by OWL 2 QL or the more expressive OWL 2 DL is needed \cite{BoschNolleAcarEckert2015}.
+In this section, we evaluate the standard five constraint languages on fulfilling each requirement to formulate RDF constraints.
+We also evaluate if a specific requirement is covered by OWL 2 QL or the more expressive OWL 2 DL is needed. \cite{BoschNolleAcarEckert2015}.
 
 \subsection{Expressivity}
 
 As we want to be able to perform reasoning before actually validating the data,
 we use the two types of constraints - \emph{constraints without reasoning} and \emph{constraints with reasoning} - as criteria to measure constraint-specific expressivity.
 We define these two expressivity classes as follows: 
-
+\er{What is done / presented here should be told briefly.}
 \begin{itemize}
   \item $Expr(\mathcal{C})$: set of all constraints
 	\item $Expr(\overline{\mathcal{C}_R})$: set of constraints without reasoning 
