--- a/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
+++ b/paper/ESWC 2015 Tutorial/ESWC2015Tutorial.tex
@@ -210,18 +210,25 @@ We describe typical constraints on metadata of DDI metadata, as well as how to f
 \end{abstract}
 %
 
-\section{Anweisungen}
-
-Proposals should not exceed 5 pages using a reasonable font size (not less than 11 pts). They should include the call for participation together with the following details:
-- Abstract: 200 words maximum, for inclusion to the ESWC 2015 Web site.
-- Tutorial description: objectives of the tutorial and relevance to ESWC 2015; information about the scope and level of detail of the material to be covered; intended audiences; learning objectives; practical sessions.
-- Tutorial length: Half or full day, including preferences.
-- Previous versions or related tutorials: other venues of this or similar tutorials (potentially by a different team of tutors), motivation for offering the tutorial again, at the ESWC2015.
-- Tutoring team: short bios of the presenters, including previous training and public speaking experience (e.g., teaching in English, conference presentations, tutorials etc.)
+%\section{Anweisungen}
+%
+%Proposals should not exceed 5 pages using a reasonable font size (not less than 11 pts). They should include the call for participation together with the following details:
+%- Abstract: 200 words maximum, for inclusion to the ESWC 2015 Web site.
+%- Tutorial description: objectives of the tutorial and relevance to ESWC 2015; information about the scope and level of detail of the material to be covered; intended audiences; learning objectives; practical sessions.
+%- Tutorial length: Half or full day, including preferences.
+%- Previous versions or related tutorials: other venues of this or similar tutorials (potentially by a different team of tutors), motivation for offering the tutorial again, at the ESWC2015.
+%- Tutoring team: short bios of the presenters, including previous training and public speaking experience (e.g., teaching in English, conference presentations, tutorials etc.)
 
 \section{Call for Participation}
 
-The DDI-RDF Discovery Vocabulary (Disco) is an RDF Schema vocabulary that supports the discovery of microdata sets and related metadata using RDF technologies in the Web of Linked Data. Disco can be used to discover datasets by searching for specific questions, topics, and geographical coverage. Disco is intended to provide means to describe microdata by essential metadata for the discovery purpose.
+In different real world use cases, the workshop organizers demonstrate the adoption and inclusion of Disco in existing information systems. 
+Workshop participants are encouraged to present their own use cases where Disco has been applied or will be used. 
+Together with the workshop organizers, workshop participants will have the possibility to elaborate an RDF representation of their use cases and to formulate typical queries which are necessary to solve use case related problems.
+The workshop addresses software developers as well as data publishers who want to publish DDI metadata as Linked Data.
+
+\section{Tutorial Description}
+
+The DDI-RDF Discovery Vocabulary (Disco)\footnote{current specification is available at \url{https://github.com/linked-statistics/disco-spec}}  is an RDF Schema vocabulary that supports the discovery of microdata sets and related metadata using RDF technologies in the Web of Linked Data. Disco can be used to discover datasets by searching for specific questions, topics, and geographical coverage. Disco is intended to provide means to describe microdata by essential metadata for the discovery purpose.
  
 The DDI (Data Documentation Initiative) is a structured metadata standard related to the observation and measurement of human activity.
 It started out in the mid-1990s as a replacement for traditional archival code books documenting research data, and then branched off to cover the research data life cycle. Over time, as the data landscape has
@@ -229,10 +236,7 @@ changed, the DDI XML specifications have evolved to add new coverage and functio
 While the Data Documentation Initiative (DDI) is an international metadata standard with origins in the quantitative social sciences, it is increasingly being used by researchers and practitioners in other disciplines. The DDI specifications are also being used to document other data types, such as social media, biomarkers, administrative data, and transaction data. The specification itself is modular and can document and manage different stages of the data lifecycle, such as conceptualization, collection, processing, analysis, distribution, discovery, repurposing, and archiving.
 Existing DDI-XML instances can be transformed into this RDF format and therefore exposed as Linked Data. This workshop aims to present the Disco vocabulary and its practical appliance with DDI metadata in detail.
  
-For a publication of DDI metadata as Linked Data, widely accepted and adopted RDF vocabularies (e.g. RDF Data Cube, DCAT, and PHDD) are reused to a large extend. The workshop organizers show how Disco is interwoven with these vocabularies. The Data Cube vocabulary is a W3C standard for representing data cubes representing multidimensional aggregate data derived from microdata which is represented by Disco. DCAT is a W3C standard for describing catalogs of datasets. Physical data description (PHDD) represents data (tables) in a rectangular format. The data could be either represented in records with character-separated values (CSV) or in records with fixed length. The combined usage of PHDD, Disco, and DCAT enables the creation of data repositories which provide metadata for the description of collections, for data discovery, and for processing of the data.
- 
-In different real world use cases, the workshop organizers demonstrate the adoption and inclusion of Disco in existing information systems. Workshop participants are encouraged to present their own use cases where Disco has been applied or will be used. Together with the workshop organizers, workshop participants will have the possibility to elaborate an RDF representation of their use cases and to formulate typical queries which are necessary to solve use case related problems.
-The workshop has a technical perspective and addresses software developers as well as data publishers who want to publish DDI metadata as Linked Data. No prerequisites are necessary, since a short introduction to RDF and Linked Open Data will be given.
+For a publication of DDI metadata as Linked Data, widely accepted and adopted RDF vocabularies (e.g. RDF Data Cube, DCAT, and PHDD) are reused to a large extend. The workshop organizers show how Disco is interwoven with these vocabularies. The Data Cube vocabulary is a W3C standard for representing data cubes representing multidimensional aggregate data derived from microdata which is represented by Disco. DCAT is a W3C standard for describing catalogs of datasets. Physical data description (PHDD) represents data (tables) in a rectangular format. The data could be either represented in records with character-separated values (CSV) or in records with fixed length. The combined usage of PHDD, Disco, and DCAT enables the creation of data repositories which provide metadata for the description of collections, for data discovery, and for processing of the data. 
 
 Existing DDI instances are stored in form of XML documents and validated against XML Schemas\footnote{XML Schemas of current DDI version available at \url{http://www.ddialliance.org/Specification/DDI-Lifecycle/3.2/XMLSchema/}}.
 DDI-XML documents can be transformed into DDI-RDF and therefore exposed as Linked Data.
@@ -243,7 +247,10 @@ These working groups address the formulation and validation of RDF constraints.
 We will describe typical constraints on metadata of DDI metadata, as well as how to formulate and to validate them.
 We will show how to formulate these constraints by different constraint languages such as OWL 2.
 
-\section{Tutorial Description}
+In 2012, we started the development of Disco in form of a one-week Dagstuhl seminar - another one-week Dagstuhl seminar and two one-week workshops followed.  
+In 2014, we finished the technical review of Disco.
+We addressed more than ten mailing lists from the Linked Data and the DDI communities and got feedback which has been incorporated into the Disco specification.
+We are planning to officially publish Disco after three years of development in the first half of the year 2015 after an additional official technical review of the DDI Alliance\footnote{\url{http://www.ddialliance.org/}}.
 
 \subsection{Objectives of the Tutorial} 
 
@@ -253,7 +260,7 @@ In this tutorial, the DDI-RDF Discovery vocabulary (Disco) and its interplay wit
 \subsection{Scope and Level of Detail of the Material}
 
 \subsection{Intended Audiences}
-Linked Data experts that are interested in modelling and publishing complex and highly inter-connected data sets as Linked Data
+Linked Data experts that are interested in modelling and publishing complex and highly inter-connected data sets as Linked Data.
 
 \subsection{Learning Objectives}
 The learning objectives of this tutorial are the following:
@@ -262,7 +269,6 @@ The learning objectives of this tutorial are the following:
 \item Representing the interplay of Disco data with existing vocabularies
 \item Validation of Disco
 \end{itemize}
-
 
 \subsection{Practical Sessions}
 During the tutorial, one complex data set will be built, which serves as ongoing running example. In all sessions, there will be practical exercises where the participants are asked to model and query particular parts of the example data sets. The infrastructure for these exercises, i.e. a triple store with example data, will be provided for all participants by the presenters.
@@ -282,12 +288,12 @@ At the ESWC conference, the second part of our audience - Linked Data experts - 
 
 %short bios of the presenters, including previous training and public speaking experience (e.g., teaching in English, conference presentations, tutorials etc.)
 
-Thomas Bosch\footnote{\url{http://boschthomas.blogspot.com}} (M.Sc. in Computer Science) is a PhD student at Gesis - Leibniz Institute for the Social Sciences in Mannheim , Germany since 2010.
-He studied Information Systems at the Technical University of Munich.
-His general research topic is about RDF validation. 
-He held multiple conference and workshop presentations (e.g. ISWC, DC, WWW, Dagstuhl seminars) in the last five years. 
+Thomas Bosch\footnote{\url{http://boschthomas.blogspot.com}} studies information systems, holds a degree in Computer Science (M.Sc.), and is currently a PhD student.
+His research topic is all about RDF validation.
+More specifically, he investigates how to validate any RDF constraints (formulated by multiple constraint languages) and how to express them generically. 
+He held multiple presentations at international conferences and workshops (e.g. WWW, ISWC, DC, Dagstuhl seminars). 
 
-Benjamin Zapilko holds a degree in Computer Sceince and has recently finished his PhD thesis about methods for matching social science relevant Linked Data. The defense talk will be at the end of January. Beside his PhD research, he works on modelling and publishing social science relevant data as Linked Data with the focus on data modelling and integration of heterogeneous data sources and information types. He presented his work at several international conferences.
+Benjamin Zapilko holds a degree in Computer Science and has recently finished his PhD thesis about methods for matching social science relevant Linked Data. The defense talk will be at the end of January. Beside his PhD research, he works on modelling and publishing social science relevant data as Linked Data with the focus on data modelling and integration of heterogeneous data sources and information types. He presented his work at several international conferences.
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
