--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -489,7 +489,7 @@ The W3C and DCMI WGs identified in total 74 requirements to formulate RDF constr
 Bosch et al.\footnote{Available at: \url{https://github.com/boschthomas/RDF-validation-research/paper}} explain each requirement in detail and give examples for each, represented by listed constraint languages.
 It contains also mappings to DL to logically underpin each requirement and to determine which DL constructs are needed to express which constraint.
 When the DL constructs  which are needed to express a particular constraint are known, the required expressivity and the computational complexity to perform reasoning for that constraint can be determined. 
-For example, the constraint \ms{Context-Specific Exclusive OR of Properties} (see section~\ref{sec:RDF-validation-requirements-without-reasoning-2}) can generically be expressed as follows:
+The constraint \ms{Context-Specific Exclusive OR of Properties} (see section~\ref{sec:RDF-validation-requirements-without-reasoning-2}), e.g., can generically be expressed as follows:
 \begin{center}
 \begin{DL}
 $C$ &$\sqsubseteq (\neg A \sqcap B) \sqcup (A \sqcap \neg B)$ \\
@@ -505,18 +505,15 @@ The DL constructs \ms{property inclusion}, \ms{complement}, \ms{intersection}, \
 
 \subsection{Reasoning}
 
-The W3C Data Shapes WG defines \emph{constraint} as a component of a schema what needs to be satisfied\footnote{See \url{https://www.w3.org/2014/data-shapes/wiki/Glossary}.}. 
-
-To investigate the affect of reasoning to the validation process, we grouped constraints under two groups
-
+The W3C WG defines \emph{constraint} as a component of a schema what needs to be satisfied\footnote{See \url{https://www.w3.org/2014/data-shapes/wiki/Glossary}.}. 
+We define two sets of constraints to investigate the affect of reasoning to the validation process:
 \begin{itemize}
-	\item $\overline{\mathcal{C}_{\overline{R}}}$: contraints without reasoning
+	\item $\overline{\mathcal{C}_{\overline{R}}}$: contraints without reasoning \tb{why overline R?}
 	\item $\mathcal{C}_R$: contraints with reasoning
 \end{itemize}
-
-We call the whole set of constraint as $\mathcal{C}$. 
+We call the whole set of constraints as $\mathcal{C}$. \tb{this paragraph is about constraint without reasoning. I would add the whole set of constraints to the list above}
 \emph{Constraints without reasoning} are constraints for which reasoning cannot be done or does not improve the result in any obvious sense.
-\ms{Literal Pattern Matching}\footnote{See R-44-PATTERN-MATCHING-ON-RDF-LITERALS.}, e.g., restrict literals to match given patterns.
+\ms{Literal Pattern Matching}\footnote{See R-44-PATTERN-MATCHING-ON-RDF-LITERALS.}, e.g., restricts literals to match given patterns.
 \emph{Luke's droids} can only have the numbers "R2-D2" or "C-3PO".
 The universal restriction \ms{LukesDroids $\sqsubseteq$ $\forall$ droidNumber.DroidNumber} can be expressed by OWL 2 DL.
 %\er{This is no OWL.}\tb{resolved}
@@ -552,14 +549,16 @@ The triples \ms{Luke hasDroid R2-D2} and \ms{R2-D2 droidNumber "R2-D2"\textascii
 \ms{SubProperties}, e.g., are constraints for which reasoning may be performed.
 If, e.g., an individual X has an \ms{attackingBySword} relationship to an individual Y, 
 then individual X must also have an \ms{attackingByWeapon} relationship to individual Y: \ms{attackingBySword $\sqsubseteq$ attackingByWeapon}.
-If we use subproperties without reasoning and our data contains the triple corresponding to \ms{attackingBySword(Luke, DarthVader)},
-then the triple which corresponds to \ms{attackingByWeapon(Luke, DarthVader)} has to be stated in the data explicitly.
+If we use subproperties without reasoning and our data contains the triple \ms{attackingBySword(Luke, DarthVader)},
+then the triple \ms{attackingByWeapon(Luke, DarthVader)} has to be stated explicitly.
 If this triple is not stated, a constraint violation occurs.
-If we use subproperties with reasoning, the triple (causing a constraint violation) is inferred and resolves the possible constraint violation.
+If we use subproperties with reasoning, the triple (which would cause a constraint violation) is inferred and therefore resolves the possible constraint violation.
 
 \subsection{Complexity}
 
-To evaluate RDF validation requirements, we had the classes of constraints: \emph{constraints without reasoning} and \emph{constraints with reasoning}. In addition, to have a further evaluation on the latter and to refer easily, we divide it into two classes (not disjoint). Overall, we have the following. Since, OWL 2 DL is more expressive than OWL 2 QL,  $\mathcal{C}_R ^{\mathcal{QL}} \subseteq \mathcal{C}_R ^{\mathcal{DL}}$ follows. 
+To evaluate RDF validation requirements, we had the classes of constraints: \emph{constraints without reasoning} and \emph{constraints with reasoning}. 
+In addition, to have a further evaluation on the latter and to refer easily, we divide $\mathcal{C}_R$ into two classes (not disjoint). 
+Overall, we have the following. Since, OWL 2 DL is more expressive than OWL 2 QL,  $\mathcal{C}_R ^{\mathcal{QL}} \subseteq \mathcal{C}_R ^{\mathcal{DL}}$ follows. 
 
 \begin{itemize}\itemsep1em
 	\item $\overline{\mathcal{C}_R}$: validation by query answering without reasoning
@@ -567,10 +566,11 @@ To evaluate RDF validation requirements, we had the classes of constraints: \emp
 	\item $\mathcal{C}_R ^{\mathcal{DL}}$: validation by query answering with OWL 2 DL reasoning
 	
 \end{itemize}
-Recall that, in this work we limit \emph{constraints with reasoning} ($C_R$) to the ones which can be expressed by OWL 2 DL and still requires reasoning  (i.e., $C_R = C_R ^{\mathcal{DL}}$). This is due the fact that, OWL 2 DL is still quite expressive. \footnote{It could alternatively be set to a more expressive language (e.g., OWL 2 Full). Such treatment can be done in future work, if it is understood that we require that.} Some of those constraints can still be expressed in some constraint languages, which will be the focus of next section.
+Recall that, in this work we limit \emph{constraints with reasoning} ($C_R$) to the ones which can be expressed by OWL 2 DL and still requires reasoning  (i.e., $C_R = C_R ^{\mathcal{DL}}$). This is due the fact that, OWL 2 DL is still quite expressive\footnote{It could alternatively be set to a more expressive language (e.g., OWL 2 Full). Such treatment can be done in future work, if it is understood that we require that.}. 
+Some of those constraints can still be expressed in some constraint languages, which will be the focus of next section.
 
 %The complexity class $\mathcal{C}_R$ encompasses all \emph{constraints with reasoning} for which reasoning can be executed but cannot be expressed by OWL 2.  \er{What/Why can't  be expressed by OWL 2  while being inferred? }\tb{e.g. class-specific property ranges or class-specific reflexive object properties cannot be expressed in OWL / these 2 axioms can only be stated globally for the properties, we cannot restrict it to individuals of specific classes}
-The next table gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed. 
+The next table gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed:
 
 
 \begin{center}
@@ -597,9 +597,8 @@ The  relation between those complexity classes is well-known \cite{Arora:2009:CC
 \textsc{LogSpace} \subseteq \textsc{Ptime} \subseteq \textsc{Pspace-}\text{Complete} \subseteq \textsc{N2exptime} 
 \end{eqnarray*}
 
-There are constraints (e.g., class-specific property range, class-specific reflexive object properties) for which reasoning could be executed even though there is currently no implementation supported by any constraint language. 
-We leave it as future work to write SPARQL CONSTRUCT queries in order to provide reasoning for these constraints.
-
+%There are constraints (e.g., class-specific property range, class-specific reflexive object properties) for which reasoning could be executed even though there is currently no implementation supported by any constraint language. 
+%We leave it as future work to write SPARQL CONSTRUCT queries in order to provide reasoning for these constraints.
 
 \section{Classification of Constraint Languages according to Expressivity and Complexity}
  
@@ -628,7 +627,8 @@ Expressivity scores (on how many of those constraints can be expressed by a part
 %If in our knowledge base it is stated that \ms{DarthVader} is a \ms{Sith} (e.g., \ms{Sith(DarthVader)}) and  Siths feel the force of the dark side (e.g., \ms{Sith $\sqsubseteq$ FeelingForceDarkSide}), it is either possible to infer that \ms{DarthVader} feels the force of the dark side (\ms{FeelingForceDarkSide(DarthVader)}) 
 %or to check if this class assignment is explicitly stated in the data without reasoning. 
 Although, there are no reasoning implementations for  constraint languages other than OWL 2 available yet, 
-\emph{constraints with reasoning} cannot only be expressed by OWL 2 but also by other constraint languages. \er{This is again the part I don't understand.}\tb{but also by other constraint languages}
+\emph{constraints with reasoning} cannot only be expressed by OWL 2 but also by other constraint languages. 
+%\er{This is again the part I don't understand.}\tb{but also by other constraint languages}
 
 \begin{center}
 \begin{evaluation}
@@ -637,10 +637,10 @@ $Expr(\overline{\mathcal{C}_R})$ (42) & 6 & 18(4) & 7(4) & 8 & 12 & 41(1)\\
 $Expr(\mathcal{C}_R)$ (32) & 8 & 29 & 11 & 11(2) & 11(1) & 32 \\ 
 \end{evaluation}
 \end{center}
-\tb{this is indeed a misunderstanding. I only took into account that is DSP supports 6 EXPR-C constraints and OWL 2 DL 5, then DSP is more expressive than OWL 2 DL regarding the expressivity class EXPR-C / but this is not right?}
+%\tb{this is indeed a misunderstanding. I only took into account that is DSP supports 6 EXPR-C constraints and OWL 2 DL 5, then DSP is more expressive than OWL 2 DL regarding the expressivity class EXPR-C / but this is not right?}
 In the table above, the total amount of constraints per constraint class is shown by numbers in round brackets in the first column.
 Numbers in round brackets in the other columns indicate the number of constraints which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
-\er{One possible misunderstanding (maybe not) is the ordering. It is not only based on the size of the number of the constrains that they satisfies right? For instance, if there are 6 constraints (from EXPR-C) that  DSP satisfies and OWL2-DL  can satisfy lets say only 5 of them but 13 other, in such scenario OWL2 DL and DSP would be incomparable (no ordering). It is more expressive only if it contains those 6 and extras.}
+%\er{One possible misunderstanding (maybe not) is the ordering. It is not only based on the size of the number of the constrains that they satisfies right? For instance, if there are 6 constraints (from EXPR-C) that  DSP satisfies and OWL2-DL  can satisfy lets say only 5 of them but 13 other, in such scenario OWL2 DL and DSP would be incomparable (no ordering). It is more expressive only if it contains those 6 and extras.}
 Total orderings are:
 \begin{eqnarray*}
 %Expr(\mathcal{C}): ... \\
